--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "sandeepDevJs",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
@@ -24,5 +25,6 @@
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
     "supervisor": "^0.12.0"
-  }
+  },
+  "devDependencies": {}
 }
