--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "sandeepDevJs",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
