--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "helmet": "^4.2.0",
     "joi": "^17.3.0",
     "mogoose": "0.0.1-security",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.4.6"
   }
 }
