--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fawn": "^2.1.5",
     "helmet": "^4.2.0",
     "joi": "^17.3.0",
     "mongoose": "^5.11.7",
