--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/sandeepDevJs/ecommerceAPI#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "celebrate": "^13.0.4",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
     "joi": "^17.3.0",
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "slugify": "^1.4.6"
   }
 }
