--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fawn": "^2.1.5",
     "helmet": "^4.2.0",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
