--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
+    "mongoose-unique-array": "^0.3.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
