--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.2",
+    "express-rate-limit": "^5.2.5",
     "helmet": "^4.2.0",
+    "hpp": "^0.2.3",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
-    "slugify": "^1.4.6"
+    "slugify": "^1.4.6",
+    "xss-clean": "^0.1.1"
   }
 }
